test/types/typedefs/bradc/redefineTypeNames2.good
redefineTypeNames2.chpl:3: error: type alias is recursive
